--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -29,13 +29,14 @@
 			</div>
 		</div>
 		<div id="divOption">
-			<button id="btnTrophy" class="btn btn-success btn-lg" onclick="ChooseAward(4)">纪念奖</button>
-            <button id="btnTrophyLast" class="btn btn-success btn-lg" onclick="ChooseAward(5)">纪念奖</button>
-			<button id="btnThird" class="btn btn-success btn-lg" onclick="ChooseAward(3)">三等奖</button>
-			<button id="btnSecond" class="btn btn-success btn-lg" onclick="ChooseAward(2)">二等奖</button>
-			<button id="btnChampion" class="btn btn-success btn-lg" onclick="ChooseAward(1)">一等奖</button>
-            <button id="btnStartAward" class="btn btn-danger btn-lg" onclick="GetAwards()">开 始</button>
+{#			<button id="btnTrophy" class="btn btn-success btn-lg" onclick="ChooseAward(4)">纪念奖</button>#}
+{#            <button id="btnTrophyLast" class="btn btn-success btn-lg" onclick="ChooseAward(5)">纪念奖2</button>#}
+{#			<button id="btnThird" class="btn btn-success btn-lg" onclick="ChooseAward(3)">三等奖</button>#}
+{#			<button id="btnSecond" class="btn btn-success btn-lg" onclick="ChooseAward(2)">二等奖</button>#}
+{#			<button id="btnChampion" class="btn btn-success btn-lg" onclick="ChooseAward(1)">一等奖</button>#}
+            <button id="btnStartAward" class="btn btn-danger btn-lg" onclick="StartAward()">开 始</button>
             <button id="btnStopAward" class="btn btn-danger btn-lg" onclick="StopAward()">开 奖</button>
+{#            <button id="btnReset" class="btn btn-danger btn-lg" onclick="Reset()">Reset</button>#}
 {#            <button id="btnAwardLevel" class="btn btn-danger btn-lg" >0</button>#}
 {#            <button id="btnInitDB" class="btn btn-danger btn-lg" onclick="InitDB()">InitDB</button>#}
 		</div>
